--- a/app/views/locations/show_all.html.erb
+++ b/app/views/locations/show_all.html.erb
@@ -1,1 +1,5 @@
-It worked!
+<ul>
+	<% @locations.each do |location| %>
+		<li><%= link_to location.name, location_path(location.id) %></li>
+	<% end %>
+</ul>
