finished updating database and all routes with actions

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -15,6 +15,16 @@
 </div>  
 
 <div class = "form">
+  <%= f.label :image_url %>
+  <%= f.text_field :image_url %>
+</div>  
+
+<div class = "form">
+  <%= f.label :review %>
+  <%= f.text_field :review %>
+</div>  
+
+<div class = "form">
   <%= f.label :site_url %>
   <%= f.text_field :site_url %>
 </div>
