--- a/app/views/locations/show_all.html.erb
+++ b/app/views/locations/show_all.html.erb
@@ -1,5 +1,24 @@
-<ul>
-	<% @locations.each do |location| %>
-		<li><%= link_to location.name, location_path(location.id) %></li>
-	<% end %>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th>Locations</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+	
+  <tbody>
+    <% @locations.each do |location| %>
+      <tr>
+      	<td><%= image_tag location.image_url, width: "100px" %> </td>
+        <td><%= location.name %></td>
+ 		<td><%= location.snippet %></td>
+        <td><%= link_to 'Show', location %></td>
+        <td><%= link_to 'Edit', edit_location_path(location) %></td>
+        <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'New', new_location_path(location) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
